fix bug 963973 - Add word break to headings on mobile

--- a/media/redesign/stylus/tags.styl
+++ b/media/redesign/stylus/tags.styl
@@ -199,6 +199,15 @@ a {
 }
 
 
+
+@media media-query-mobile {
+
+  h1, h2, h3, h4, h5, h6 {
+    word-break: break-all;
+  }
+}
+
+
 @media print {
   /* Not a pretty selector but needed to keep Prism in check */
   pre, pre[class*="language-"], code {
